# yamayamaru-storage-place

./: README.md
memo_2022-09-29/: lichee_rv_pin_assignment.txt  mangopi_mq_pro_pin_assignment.txt
memo_2022-10-09/: mangopi_mq_pro_ubuntu_server_22.10_setup.txt
memo_2022-10-22/: licheerv_ubuntu_server_22.10_setup.txt
memo_2022-10-23/: mangopi_mq_pro_ubuntu_server_22.10_setup.txt
memo_2023-02-05/: VisionFive2-chroot-ubuntu-server.txt  VisionFive2-pi_fftc6.txt  VisionFive2-unixbench-chroot-ubuntu-server-22.04.1image.txt  VisionFive2-unixbench.txt
memo_2023-02-08/: visionfive2-vulkan-demo.txt
memo_2023-02-10/: SuperTuxKart_install.txt
memo_2023-02-20/: MSX-TurboR_CPU_mode_change.txt  ubuntu_server_22.04.1_np2kai_build_memo.txt
memo_2023-02-23/: MSX-TurboR_CPU_mode_change_sdcc4.2.0.txt
memo_2023-02-27/: visionfive2_gpio.txt  visionfive2_gpio2.txt
memo_2023-03-08/: Using_OpenWatcom_C_V2.0_with_NP2kai_in_VisionFive2.txt
memo_2023-03-12/: armbian_xorg_setting.txt
memo_2023-10-01/: IntelN100-minipc-ubuntu-22.04-unixbench.txt
memo_2024-02-10/: RaspberryPi4-ubuntu23.10-64bit-duckstation-memo.txt
memo_2024-02-24/: RaspberryPi4-64bit-raspberrypi-os-bookworm-duckstation-memo.txt
memo_2024-03-18/: ubuntu20.04-nfs-server-xm6typeg-nfs-client.txt
omake-2024-11-03/: GRDEMO.C  cc.bat
omake-2026-06-05/: CL21RAD.DOC  HC17LR.DOC  HC17UM.DOC  HCK17UK.DOC  HCQR.DOC  SP12UM.DOC  readme.txt
omake-2026-06-15/: readme.txt
source-code-2023-08-26/: msx_screen8_plot.bat  msx_screen8_plot.py  (+4 more)
source-code_2024-09-21/: CMakeLists.txt  readme.txt  riscv_rdcycle_usb01.c
(+620 files in other folders)
